[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "plasma-engine"
version = "0.0.1"
authors = [
  { name="Matiiss", email="matiiss@matiiss.com" },
]
description = "A pygame-ce-based engine for rapid game development."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["pygame-ce>=2.3.0"]

[project.optional-dependencies]
test = ["pytest==7.4.0"]

[project.urls]
"Homepage" = "https://github.com/Matiiss/plasma-engine"
"Bug Tracker" = "https://github.com/Matiiss/plasma-engine/issues"
